<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Tiq-2l-amQ">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Auth View Controller-->
        <scene sceneID="qCV-xI-Kfs">
            <objects>
                <viewController id="Tiq-2l-amQ" customClass="AuthViewController" customModule="tdd" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="Hyn-P3-9rh">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="tww-4d-Ic2">
                                <rect key="frame" x="10" y="94" width="394" height="138"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Q9g-zJ-0fc">
                                        <rect key="frame" x="0.0" y="0.0" width="394" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" autocorrectionType="no"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZH3-80-gXv">
                                        <rect key="frame" x="0.0" y="54" width="394" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kyg-wH-WTE">
                                        <rect key="frame" x="0.0" y="108" width="394" height="30"/>
                                        <state key="normal" title="Sign In"/>
                                        <connections>
                                            <action selector="signIn:" destination="Tiq-2l-amQ" eventType="touchUpInside" id="LAt-GM-vHw"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <constraints>
                            <constraint firstItem="tww-4d-Ic2" firstAttribute="top" secondItem="yWu-ir-Z9v" secondAttribute="top" constant="50" id="LhZ-4E-dyQ"/>
                            <constraint firstItem="tww-4d-Ic2" firstAttribute="leading" secondItem="yWu-ir-Z9v" secondAttribute="leading" constant="10" id="VCv-FH-dyK"/>
                            <constraint firstItem="yWu-ir-Z9v" firstAttribute="trailing" secondItem="tww-4d-Ic2" secondAttribute="trailing" constant="10" id="uaJ-9g-Q54"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="yWu-ir-Z9v"/>
                    </view>
                    <connections>
                        <outlet property="password" destination="ZH3-80-gXv" id="OKD-9b-nJb"/>
                        <outlet property="username" destination="Q9g-zJ-0fc" id="NSH-Un-Rcd"/>
                        <segue destination="nbo-Gs-Zgf" kind="show" identifier="todoIdentifier" id="Krg-q3-TAm"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="VLy-Ou-pbx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-403" y="82"/>
        </scene>
        <!--Title-->
        <scene sceneID="oOh-n2-g3C">
            <objects>
                <tableViewController modalPresentationStyle="fullScreen" id="wRF-Oh-SBL" customClass="TodoTableViewController" customModule="tdd" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="C9h-p6-Xv5">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="80" id="Ya7-8g-MmQ">
                                <rect key="frame" x="0.0" y="28" width="414" height="80"/>
                                <autoresizingMask key="autoresizingMask"/>
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Ya7-8g-MmQ" id="yBZ-BU-Rdh">
                                    <rect key="frame" x="0.0" y="0.0" width="414" height="80"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                </tableViewCellContentView>
                            </tableViewCell>
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="wRF-Oh-SBL" id="3YT-c5-2RB"/>
                            <outlet property="delegate" destination="wRF-Oh-SBL" id="QPM-Tn-2w2"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Title" id="uxS-hp-FRY">
                        <barButtonItem key="rightBarButtonItem" title="Add Note" id="fHk-hb-EpV">
                            <connections>
                                <action selector="toAddNoteView:" destination="wRF-Oh-SBL" id="DJ8-rW-vPO"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
                        <segue destination="lds-Tf-kgZ" kind="show" identifier="addnote" id="ti6-aL-sHJ"/>
                    </connections>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="zRH-2D-5HP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1492.753623188406" y="82.366071428571431"/>
        </scene>
        <!--Add Note View Controller-->
        <scene sceneID="LXl-gH-U8k">
            <objects>
                <viewController id="lds-Tf-kgZ" customClass="AddNoteViewController" customModule="tdd" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="IV4-5f-a1W">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="cZK-wH-Rlt">
                                <rect key="frame" x="10" y="106" width="394" height="64"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Note Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tN7-jl-ntz">
                                        <rect key="frame" x="0.0" y="0.0" width="394" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xdk-1c-jYp">
                                        <rect key="frame" x="0.0" y="34" width="394" height="30"/>
                                        <state key="normal" title="Button"/>
                                        <connections>
                                            <action selector="addNoteWithSender:" destination="lds-Tf-kgZ" eventType="touchUpInside" id="bhz-8x-wqe"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <constraints>
                            <constraint firstItem="cZK-wH-Rlt" firstAttribute="top" secondItem="7Mc-kZ-AMj" secondAttribute="top" constant="50" id="JEg-Kz-Vom"/>
                            <constraint firstItem="cZK-wH-Rlt" firstAttribute="leading" secondItem="7Mc-kZ-AMj" secondAttribute="leading" constant="10" id="ZYU-TF-ZYD"/>
                            <constraint firstItem="7Mc-kZ-AMj" firstAttribute="trailing" secondItem="cZK-wH-Rlt" secondAttribute="trailing" constant="10" id="sdO-QE-DyJ"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="7Mc-kZ-AMj"/>
                    </view>
                    <navigationItem key="navigationItem" id="OjF-pS-bf4"/>
                    <connections>
                        <outlet property="titleTextField" destination="tN7-jl-ntz" id="J4v-ND-Mxw"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="To2-YJ-mPY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="2314" y="82"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="VnZ-sT-9t9">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" modalPresentationStyle="fullScreen" id="nbo-Gs-Zgf" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationItem key="navigationItem" id="L0W-TN-3In"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="vPy-74-C9k">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="aqS-lH-p82">
                        <autoresizingMask key="autoresizingMask"/>
                    </toolbar>
                    <connections>
                        <segue destination="wRF-Oh-SBL" kind="relationship" relationship="rootViewController" id="Q6F-ze-vNY"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="g9Q-fO-5Ma" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="582.60869565217399" y="82.366071428571431"/>
        </scene>
    </scenes>
</document>
